# Company-Restriction

./: .gitignore  README.md  __init__.py  hooks.py  pyproject.toml  setup.py
company-restriction/: hooks.py
company_restriction/: hooks.py  modules.txt  utils.py
company_restriction/config/: desktop.py
company_restriction/fixtures/: client_script.json  custom_field.json
