[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company_restriction"
authors = [{name = "Your Name", email = "your@email.com"}]
description = "Restrict users to specific companies in ERPNext with complete data isolation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["company_restriction*"]

[tool.setuptools.package-data]
company_restriction = ["fixtures/*.json", "patches.txt", "modules.txt"]

[tool.setuptools.dynamic]
version = {attr = "company_restriction.__version__.__version__"}

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
